html base +inizio articolo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
-    <article></article>
+    <header>
+        <img src="img/logo.svg" alt="logo" id="logo-header">
+    </header>
+    <article>
+        <!-- inizio prima parte articolo -->
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <div>scritto da <span>The booleaner</span></div>
+            <small>il 10/10/2020</small>
+        </section>
+        <!-- fine prima parte articolo -->
+        <!-- foto articolo -->
+        <section>
+            <img src="img/tim-1.jpg" alt="foto tim 1">
+            <img src="img/tim-2.jpg" alt="foto tim 2">
+        </section>
+        <!-- fine foto articolo -->
+        <!-- seconda parte articolo -->
+        <section>
+
+        </section>
+    </article>
     <footer></footer>
 </body>
 </html>
