--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
             <img src="img/tim-2.jpg" alt="foto tim 2">
         </section>
         <!-- fine foto articolo -->
+        <!-- descrizioni foto -->
+        <section>
+            <div>
+                <small>1st photo: John S. and James L Knight Foundation, by Scot Henrichsen</small>
+            </div>
+            <div>
+                <small>2nd photo: Wikimedia, by Paul Clarke</small>
+            </div>
+        </section>
+        <!-- fine descrizioni foto -->
         <!-- seconda parte articolo -->
         <section>
-
+            
         </section>
     </article>
     <footer></footer>
