inizio seconda parte articolo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <!-- fine descrizioni foto -->
         <!-- seconda parte articolo -->
         <section>
-            
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Maxime vero velit magnam architecto consequatur</mark>, beatae autem, nihil et minima itaque recusandae, delectus vel rerum praesentium amet voluptatum nostrum nemo expedita? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, quod. Harum nisi omnis ratione, modi commodi fugit architecto, saepe vitae aspernatur placeat fugiat illo enim ullam unde culpa rem totam?</p>
+            </div>
         </section>
     </article>
     <footer></footer>
