--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <section>
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Maxime vero velit magnam architecto consequatur</mark>, beatae autem, nihil et minima itaque recusandae, delectus vel rerum praesentium amet voluptatum nostrum nemo expedita? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, quod. Harum nisi omnis ratione, modi commodi fugit architecto, saepe vitae aspernatur placeat fugiat illo enim ullam unde culpa rem totam?</p>
+                <!-- lista -->
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur rerum quod ipsa facilis quasi ad.</li>
+                    <li>am explicabo est aut unde aperiam accusantium ab temporibus aliquam, expedita sint quas eum? Ad, facere quasi!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, qui ipsum fugiat non nisi inventore illo debitis cum.</li>
+                </ul>
             </div>
         </section>
     </article>
