--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <img src="img/logo.svg" alt="logo" id="logo-header">
     </header>
+    <!-- inizio articolo -->
     <article>
         <!-- inizio prima parte articolo -->
         <section>
@@ -46,8 +47,47 @@
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, qui ipsum fugiat non nisi inventore illo debitis cum.</li>
                 </ul>
             </div>
+            <!-- fine lista -->
+            <!-- tabella -->
+            <div>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>lorem 1</td>
+                            <td>lorem 2</td>
+                            <td>lorem 3</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>lorem ipsum dolor</td>
+                            <td>lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque necessitatibus veniam suscipit in dolorem sunt? Delectus, ut rem et rerum omnis voluptates ullam unde molestias consectetur dolorem, laudantium, excepturi nihil!</td>
+                        </tr>
+                        <tr>
+                            <td>lorem ipsum dolor</td>
+                            <td>lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque necessitatibus veniam suscipit in dolorem sunt? Delectus, ut rem et rerum omnis voluptates ullam unde molestias consectetur dolorem, laudantium, excepturi nihil!</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td>lorem ipsum dolor</td>
+                            <td>lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque necessitatibus veniam suscipit in dolorem sunt? Delectus, ut rem et rerum omnis voluptates ullam unde molestias consectetur dolorem, laudantium, excepturi nihil!</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <!-- fine tabella -->
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet recusandae sunt dolore consequuntur consectetur quia, accusantium pariatur. Placeat, aspernatur! Ea omnis unde aliquam dolore, accusamus rerum in. Ut,<mark>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt sed, ex labore ipsa a odit obcaecati pariatur, culpa sint, quidem fugit quasi inventore maiores assumenda saepe corporis debitis illo.</mark> consequatur expedita.</p>
         </section>
+        <!-- fine seconda parte articolo -->
     </article>
-    <footer></footer>
+    <!-- fine articolo -->
+    <!-- inizio footer -->
+    <footer>
+        
+    </footer>
 </body>
 </html>
