--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
     <!-- fine articolo -->
     <!-- inizio footer -->
     <footer>
-        
+        <div>potrebbero interessarti</div>
+        <div><img src="img/monitor.jpg" alt="articolo monitor"></div>
+        <div><img src="img/graph.jpg" alt="articolo grafici"></div>
     </footer>
 </body>
 </html>
