inizio lavoro css

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
         <!-- inizio prima parte articolo -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <div>scritto da <span>The booleaner</span></div>
-            <small>il 10/10/2020</small>
+            <div class="grigio">scritto da <span id="autore">The booleaner</span></div>
+            <div><small class="grigio">il 10/10/2020</small></div>
         </section>
         <!-- fine prima parte articolo -->
         <!-- foto articolo -->
         <section>
-            <img src="img/tim-1.jpg" alt="foto tim 1">
-            <img src="img/tim-2.jpg" alt="foto tim 2">
+            <img src="img/tim-1.jpg" alt="foto tim 1" class="img-article">
+            <img src="img/tim-2.jpg" alt="foto tim 2" class="img-article">
         </section>
         <!-- fine foto articolo -->
         <!-- descrizioni foto -->
         <section>
             <div>
-                <small>1st photo: John S. and James L Knight Foundation, by Scot Henrichsen</small>
+                <div><small>1st photo: John S. and James L Knight Foundation, by Scot Henrichsen</small></div>
             </div>
             <div>
-                <small>2nd photo: Wikimedia, by Paul Clarke</small>
+                <div><small>2nd photo: Wikimedia, by Paul Clarke</small></div>
             </div>
         </section>
         <!-- fine descrizioni foto -->
